refactor(ui): apply list mappings

--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -1192,6 +1192,9 @@
           "paddingHorizontal": {
             "type": "number"
           },
+          "backgroundColor": {
+            "type": "string"
+          },
           "iconWidth": {
             "type": "number"
           },
@@ -1204,20 +1207,20 @@
           "iconTintColor": {
             "type": "string"
           },
-          "titleColor": {
-            "type": "string"
+          "titleMarginHorizontal": {
+            "type": "number"
           },
           "titleFontSize": {
+            "type": "number"
+          },
+          "titleLineHeight": {
             "type": "number"
           },
           "titleFontWeight": {
             "type": "string"
           },
-          "titleMarginHorizontal": {
-            "type": "number"
-          },
-          "titleMarginVertical": {
-            "type": "number"
+          "titleColor": {
+            "type": "string"
           },
           "descriptionColor": {
             "type": "string"
@@ -1225,16 +1228,10 @@
           "descriptionFontSize": {
             "type": "number"
           },
+          "descriptionLineHeight": {
+            "type": "number"
+          },
           "descriptionMarginHorizontal": {
-            "type": "number"
-          },
-          "descriptionMarginVertical": {
-            "type": "number"
-          },
-          "accessoryWidth": {
-            "type": "number"
-          },
-          "accessoryHeight": {
             "type": "number"
           },
           "accessoryMarginHorizontal": {
@@ -1258,27 +1255,26 @@
       "appearances": {
         "default": {
           "mapping": {
-            "paddingVertical": 12,
-            "paddingHorizontal": 6,
-            "iconWidth": 48,
-            "iconHeight": 48,
-            "iconMarginHorizontal": 6,
-            "iconTintColor": "gray-primary",
-            "titleColor": "text-primary",
-            "titleFontSize": 20,
+            "paddingHorizontal": 8,
+            "paddingVertical": 8,
+            "backgroundColor": "opacity-transparent",
+            "iconWidth": 40,
+            "iconHeight": 40,
+            "iconMarginHorizontal": 8,
+            "iconTintColor": "color-basic-500",
+            "titleMarginHorizontal": 8,
+            "titleFontSize": 13,
+            "titleLineHeight": 24,
+            "titleColor": "font-primary-color",
             "titleFontWeight": "600",
-            "titleMarginHorizontal": 6,
-            "titleMarginVertical": 4,
-            "descriptionColor": "gray-400",
-            "descriptionFontSize": 14,
-            "descriptionMarginHorizontal": 6,
-            "descriptionMarginVertical": 4,
-            "accessoryWidth": 48,
-            "accessoryHeight": 48,
-            "accessoryMarginHorizontal": 6,
+            "descriptionMarginHorizontal": 8,
+            "descriptionFontSize": 11,
+            "descriptionLineHeight": 16,
+            "descriptionColor": "color-basic-600",
+            "accessoryMarginHorizontal": 8,
             "state": {
               "active": {
-                "backgroundColor": "gray-100"
+                "backgroundColor": "color-basic-100"
               }
             }
           }
