--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -1444,7 +1444,20 @@
     "Popover": {
       "meta": {
         "scope": "all",
-        "parameters": {},
+        "parameters": {
+          "minWidth": {
+            "type": "number"
+          },
+          "minHeight": {
+            "type": "number"
+          },
+          "borderRadius": {
+            "type": "number"
+          },
+          "backgroundColor": {
+            "type": "string"
+          }
+        },
         "appearances": {
           "default": {
             "default": true
@@ -1455,7 +1468,12 @@
       },
       "appearances": {
         "default": {
-          "mapping": {}
+          "mapping": {
+            "minWidth": 56,
+            "minHeight": 32,
+            "borderRadius": 8,
+            "backgroundColor": "color-white"
+          }
         }
       }
     },
