refactor(ui): apply tooltip mappings

--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -2034,6 +2034,27 @@
           "popoverBackgroundColor": {
             "type": "string"
           },
+          "iconWidth": {
+            "type": "number"
+          },
+          "iconHeight": {
+            "type": "number"
+          },
+          "iconMarginHorizontal": {
+            "type": "number"
+          },
+          "iconTintColor": {
+            "type": "string"
+          },
+          "textMarginHorizontal": {
+            "type": "number"
+          },
+          "textFontSize": {
+            "type": "number"
+          },
+          "textLineHeight": {
+            "type": "number"
+          },
           "textColor": {
             "type": "string"
           }
@@ -2049,11 +2070,18 @@
       "appearances": {
         "default": {
           "mapping": {
-            "popoverPaddingHorizontal": 8,
-            "popoverPaddingVertical": 4,
+            "popoverPaddingHorizontal": 4,
+            "popoverPaddingVertical": 6,
             "popoverBorderRadius": 8,
-            "popoverBackgroundColor": "#0D1C2F",
-            "textColor": "text-primary-inverse"
+            "popoverBackgroundColor": "font-primary-color",
+            "iconWidth": 16,
+            "iconHeight": 16,
+            "iconMarginHorizontal": 4,
+            "iconTintColor": "color-white",
+            "textMarginHorizontal": 4,
+            "textFontSize": 11,
+            "textLineHeight": 16,
+            "textColor": "color-white"
           }
         }
       }
