refactor(ui): apply tab mappings

--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -1657,16 +1657,28 @@
       "meta": {
         "scope": "all",
         "parameters": {
-          "textColor": {
-            "type": "string"
+          "textFontSize": {
+            "type": "number"
+          },
+          "textLineHeight": {
+            "type": "number"
           },
           "textFontWeight": {
             "type": "number"
+          },
+          "textMarginVertical": {
+            "type": "number"
+          },
+          "textColor": {
+            "type": "string"
           },
           "iconWidth": {
             "type": "number"
           },
           "iconHeight": {
+            "type": "number"
+          },
+          "iconMarginVertical": {
             "type": "number"
           },
           "iconTintColor": {
@@ -1690,15 +1702,19 @@
       "appearances": {
         "default": {
           "mapping": {
-            "textColor": "gray-dark",
-            "textFontWeight": "600",
-            "iconWidth": 20,
-            "iconHeight": 20,
-            "iconTintColor": "gray-dark",
+            "textMarginVertical": 2,
+            "textFontSize": 14,
+            "textLineHeight": 16,
+            "textFontWeight": "800",
+            "textColor": "color-basic-600",
+            "iconWidth": 24,
+            "iconHeight": 24,
+            "iconMarginVertical": 2,
+            "iconTintColor": "color-basic-500",
             "state": {
               "selected": {
-                "textColor": "blue-primary",
-                "iconTintColor": "blue-primary"
+                "textColor": "color-primary-500",
+                "iconTintColor": "color-primary-500"
               }
             }
           }
@@ -1709,7 +1725,7 @@
       "meta": {
         "scope": "all",
         "parameters": {
-          "height": {
+          "paddingVertical": {
             "type": "number"
           },
           "indicatorHeight": {
@@ -1733,10 +1749,10 @@
       "appearances": {
         "default": {
           "mapping": {
-            "height": 42,
+            "paddingVertical": 4,
             "indicatorHeight": 4,
             "indicatorBorderRadius": 2,
-            "indicatorBackgroundColor": "blue-primary"
+            "indicatorBackgroundColor": "color-primary-500"
           }
         }
       }
