refactor(ui): apply top-navigation mappings

--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -2061,17 +2061,11 @@
         }
       }
     },
-    "TopNavigationBar": {
+    "TopNavigation": {
       "meta": {
         "scope": "mobile",
         "parameters": {
-          "height": {
-            "type": "number"
-          },
-          "paddingTop": {
-            "type": "number"
-          },
-          "paddingBottom": {
+          "paddingVertical": {
             "type": "number"
           },
           "paddingHorizontal": {
@@ -2080,78 +2074,111 @@
           "backgroundColor": {
             "type": "string"
           },
-          "textAlign": {
-            "type": "string"
-          },
-          "titleColor": {
+          "titleTextAlign": {
             "type": "string"
           },
           "titleFontSize": {
             "type": "number"
           },
+          "titleLineHeight": {
+            "type": "number"
+          },
           "titleFontWeight": {
             "type": "string"
           },
-          "subtitleColor": {
+          "titleColor": {
+            "type": "string"
+          },
+          "subtitleTextAlign": {
             "type": "string"
           },
           "subtitleFontSize": {
             "type": "number"
           },
+          "subtitleLineHeight": {
+            "type": "number"
+          },
           "subtitleFontWeight": {
             "type": "string"
+          },
+          "subtitleColor": {
+            "type": "string"
+          },
+          "actionWidth": {
+            "type": "number"
+          },
+          "actionHeight": {
+            "type": "number"
+          },
+          "actionMarginHorizontal": {
+            "type": "number"
           }
         },
         "appearances": {
           "default": {
             "default": true
-          },
-          "titleCentered": {
-            "default": false
           }
         },
-        "variantGroups": {},
+        "variantGroups": {
+          "alignment": {
+            "start": {
+              "default": true
+            },
+            "center": {
+              "default": false
+            }
+          }
+        },
         "states": {}
       },
       "appearances": {
         "default": {
           "mapping": {
-            "height": 46,
-            "paddingTop": 4,
-            "paddingBottom": 12,
-            "paddingHorizontal": 16,
-            "backgroundColor": "blue-primary",
-            "titleColor": "text-primary-inverse",
-            "titleFontSize": 16,
+            "paddingVertical": 8,
+            "paddingHorizontal": 8,
+            "backgroundColor": "color-white",
+            "titleFontSize": 15,
+            "titleLineHeight": 24,
             "titleFontWeight": "600",
-            "subtitleColor": "text-primary-inverse",
-            "subtitleFontSize": 12,
+            "titleColor": "font-primary-color",
+            "subtitleFontSize": 11,
+            "subtitleLineHeight": 16,
             "subtitleFontWeight": "400",
-            "textAlign": "start"
-          }
-        },
-        "titleCentered": {
-          "mapping": {
-            "textAlign": "center"
+            "subtitleColor": "color-basic-600",
+            "actionWidth": 24,
+            "actionHeight": 24,
+            "actionMarginHorizontal": 8
+          },
+          "variantGroups": {
+            "alignment": {
+              "start": {
+                "titleTextAlign": "left",
+                "subtitleTextAlign": "left"
+              },
+              "center": {
+                "titleTextAlign": "center",
+                "subtitleTextAlign": "center"
+              }
+            }
           }
         }
       }
     },
-    "TopNavigationBarAction": {
+    "TopNavigationAction": {
       "meta": {
         "scope": "mobile",
         "parameters": {
-          "width": {
+          "iconWidth": {
             "type": "number"
           },
-          "height": {
+          "iconHeight": {
             "type": "number"
           },
-          "marginRight": {
-            "type": "number"
-          },
-          "tintColor": {
+          "iconTintColor": {
             "type": "string"
+          },
+          "marginHorizontal": {
+            "type": "number"
           }
         },
         "appearances": {
@@ -2160,15 +2187,23 @@
           }
         },
         "variantGroups": {},
-        "states": {}
+        "states": {
+          "active": {
+            "default": false,
+            "priority": 0,
+            "scope": "all"
+          }
+        }
       },
       "appearances": {
         "default": {
           "mapping": {
-            "width": 25,
-            "height": 25,
-            "marginRight": 8,
-            "tintColor": "white"
+            "iconTintColor": "font-primary-color",
+            "state": {
+              "active": {
+                "iconTintColor": "color-basic-900"
+              }
+            }
           }
         }
       }
