--- a/src/framework/ui/common/mapping.json
+++ b/src/framework/ui/common/mapping.json
@@ -1458,25 +1458,28 @@
           "textColor": {
             "type": "string"
           },
-          "textMarginLeft": {
+          "textMarginHorizontal": {
             "type": "number"
           },
           "textFontSize": {
             "type": "number"
           },
+          "textLineHeight": {
+            "type": "number"
+          },
           "textFontWeight": {
             "type": "string"
           },
-          "selectWidth": {
+          "iconWidth": {
             "type": "number"
           },
-          "selectHeight": {
+          "iconHeight": {
             "type": "number"
           },
-          "selectBorderRadius": {
+          "iconBorderRadius": {
             "type": "number"
           },
-          "selectBackgroundColor": {
+          "iconTintColor": {
             "type": "string"
           },
           "highlightWidth": {
@@ -1499,11 +1502,26 @@
         },
         "variantGroups": {
           "status": {
-            "error": {
+            "primary": {
+              "default": true
+            },
+            "success": {
+              "default": false
+            },
+            "info": {
+              "default": false
+            },
+            "warning": {
+              "default": false
+            },
+            "danger": {
               "default": false
             }
           },
           "size": {
+            "tiny": {
+              "default": false
+            },
             "small": {
               "default": false
             },
@@ -1511,6 +1529,9 @@
               "default": true
             },
             "large": {
+              "default": false
+            },
+            "giant": {
               "default": false
             }
           }
@@ -1537,86 +1558,155 @@
         "default": {
           "mapping": {
             "borderWidth": 2,
-            "borderColor": "gray-primary",
-            "textColor": "text-primary",
-            "textFontWeight": "500",
-            "selectBackgroundColor": "transparent",
-            "highlightBackgroundColor": "transparent",
+            "borderColor": "color-basic-500",
+            "textColor": "font-primary-color",
+            "textFontWeight": "600",
+            "iconTintColor": "opacity-transparent",
+            "highlightBackgroundColor": "opacity-transparent",
             "state": {
               "active": {
-                "borderColor": "gray-dark",
-                "highlightBackgroundColor": "gray-light"
-              },
-              "checked": {
-                "borderColor": "blue-primary",
-                "selectBackgroundColor": "blue-primary"
+                "borderColor": "color-basic-600",
+                "highlightBackgroundColor": "color-basic-200"
               },
               "disabled": {
-                "borderColor": "gray-light",
-                "textColor": "gray-300"
-              },
-              "checked.active": {
-                "borderColor": "blue-dark"
+                "borderColor": "color-basic-300",
+                "textColor": "color-basic-400"
               },
               "checked.disabled": {
-                "selectBackgroundColor": "gray-primary"
+                "borderColor": "color-basic-500",
+                "iconTintColor": "color-basic-500",
+                "textColor": "color-basic-500"
               }
             }
           },
           "variantGroups": {
             "status": {
-              "error": {
-                "borderColor": "pink-primary",
+              "primary": {
                 "state": {
                   "checked": {
-                    "borderColor": "pink-primary",
-                    "selectBackgroundColor": "pink-primary"
+                    "borderColor": "color-primary-500",
+                    "iconTintColor": "color-primary-500"
                   },
                   "checked.active": {
-                    "borderColor": "pink-primary"
+                    "borderColor": "color-primary-700"
+                  }
+                }
+              },
+              "success": {
+                "state": {
+                  "checked": {
+                    "borderColor": "color-success-500",
+                    "iconTintColor": "color-success-500"
+                  },
+                  "checked.active": {
+                    "borderColor": "color-success-700"
+                  }
+                }
+              },
+              "info": {
+                "state": {
+                  "checked": {
+                    "borderColor": "color-info-500",
+                    "iconTintColor": "color-info-500"
+                  },
+                  "checked.active": {
+                    "borderColor": "color-info-700"
+                  }
+                }
+              },
+              "warning": {
+                "state": {
+                  "checked": {
+                    "borderColor": "color-warning-500",
+                    "iconTintColor": "color-warning-500"
+                  },
+                  "checked.active": {
+                    "borderColor": "color-warning-700"
+                  }
+                }
+              },
+              "danger": {
+                "state": {
+                  "checked": {
+                    "borderColor": "color-danger-500",
+                    "iconTintColor": "color-danger-500"
+                  },
+                  "checked.active": {
+                    "borderColor": "color-danger-700"
                   }
                 }
               }
             },
             "size": {
+              "tiny": {
+                "width": 16,
+                "height": 16,
+                "iconWidth": 7.5,
+                "iconHeight": 7.5,
+                "highlightWidth": 24,
+                "highlightHeight": 24,
+                "borderRadius": 8,
+                "iconBorderRadius": 3.75,
+                "highlightBorderRadius": 12,
+                "textMarginHorizontal": 8,
+                "textFontSize": 11,
+                "textLineHeight": 16
+              },
               "small": {
-                "width": 30,
-                "height": 30,
-                "borderRadius": 15,
-                "textMarginLeft": 10,
-                "textFontSize": 14,
-                "selectWidth": 20,
-                "selectHeight": 20,
-                "selectBorderRadius": 10,
-                "highlightWidth": 50,
-                "highlightHeight": 50,
-                "highlightBorderRadius": 25
+                "width": 20,
+                "height": 20,
+                "iconWidth": 11,
+                "iconHeight": 11,
+                "highlightWidth": 32,
+                "highlightHeight": 32,
+                "borderRadius": 10,
+                "iconBorderRadius": 5.5,
+                "highlightBorderRadius": 16,
+                "textMarginHorizontal": 10,
+                "textFontSize": 13,
+                "textLineHeight": 20
               },
               "medium": {
-                "width": 36,
-                "height": 36,
-                "borderRadius": 18,
-                "textMarginLeft": 12,
-                "textFontSize": 16,
-                "selectWidth": 24,
-                "selectHeight": 24,
-                "selectBorderRadius": 12,
-                "highlightWidth": 60,
-                "highlightHeight": 60,
-                "highlightBorderRadius": 30
+                "width": 24,
+                "height": 24,
+                "iconWidth": 14,
+                "iconHeight": 14,
+                "highlightWidth": 40,
+                "highlightHeight": 40,
+                "borderRadius": 12,
+                "iconBorderRadius": 7,
+                "highlightBorderRadius": 20,
+                "textMarginHorizontal": 12,
+                "textFontSize": 13,
+                "textLineHeight": 24
               },
               "large": {
-                "width": 42,
-                "height": 42,
-                "borderRadius": 21,
-                "textMarginLeft": 14,
-                "textFontSize": 18,
-                "selectWidth": 28,
-                "selectHeight": 28,
-                "selectBorderRadius": 14,
-                "highlightWidth": 70,
-                "highlightHeight": 70,
-                "highlightBorderRadius": 35
+                "width": 32,
+                "height": 32,
+                "iconWidth": 20,
+                "iconHeight": 20,
+                "highlightWidth": 48,
+                "highlightHeight": 48,
+                "borderRadius": 16,
+                "iconBorderRadius": 10,
+                "highlightBorderRadius": 24,
+                "textMarginHorizontal": 12,
+                "textFontSize": 15,
+                "textLineHeight": 32
+              },
+              "giant": {
+                "width": 40,
+                "height": 40,
+                "iconWidth": 26,
+                "iconHeight": 26,
+                "highlightWidth": 56,
+                "highlightHeight": 56,
+                "borderRadius": 20,
+                "iconBorderRadius": 13,
+                "highlightBorderRadius": 28,
+                "textMarginHorizontal": 12,
+                "textFontSize": 17,
+                "textLineHeight": 40
               }
             }
           }
